# YOLOv4-LibTorch-GPU-deployment

./: CMakeLists.txt  README.md  pytorch2libtorch.py
include/: utils.h  yolo.h
src/: main.cpp  utils.cpp  yolo.cpp
